# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
2020/cpp20/: CMakeLists.txt
2020/cpp20/day_01/: common.hpp  one.main.cpp
2020/cpp20/day_02/: common.hpp
2020/cpp20/day_03/: ranges.main.cpp  two.main.cpp
2020/cpp20/day_04/: common.hpp
2020/cpp20/day_05/: common.hpp  one.main.cpp  two.main.cpp
2020/cpp20/day_07/: common.hpp  one.main.cpp  two.main.cpp
2020/cpp20/day_08/: common.hpp  one.main.cpp
2020/cpp20/day_09/: one.main.cpp  two.main.cpp
2020/cpp20/day_11/: common.hpp  one.main.cpp  two.main.cpp
2020/cpp20/template/: two.main.cpp
2022/python/01/: one.py  two.py
day_01/: one.main.cpp  two.main.cpp
day_02/: one.main.cpp  two.main.cpp
day_03/: common.hpp  one.main.cpp  two.main.cpp
day_04/: one.main.cpp  two.main.cpp
day_05/: common.hpp
day_06/: common.hpp  one.main.cpp  two.main.cpp
day_08/: two.main.cpp
day_09/: common.hpp
day_10/: common.hpp  one.main.cpp  two.main.cpp
day_11/: common.hpp
day_12/: common.hpp  one.main.cpp  two.main.cpp
template/: common.hpp  one.main.cpp
